--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_ENV=local
 APP_DEBUG=false
 APP_KEY=base64:nhiSqS4iQDA1zein+/h2cmCHHiog2Q5bqOeKtqX9poM=
-APP_URL=http://apprugby.herokuapp.com
+APP_URL=https://apprugby.herokuapp.com
 
 DB_CONNECTION=pgsql
 DB_HOST=ec2-50-16-217-122.compute-1.amazonaws.com
