--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_ENV=local
-APP_DEBUG=false
+APP_DEBUG=true
 APP_KEY=base64:nhiSqS4iQDA1zein+/h2cmCHHiog2Q5bqOeKtqX9poM=
 APP_URL=https://apprugby.herokuapp.com
 
