--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
+        "php": "7.2",
         "laravel/framework": "5.2.*",
         "dwij/laraadmin": "1.0.40"
     },
